--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -34,6 +34,6 @@
       }
     </script>
 
-    <script data-main="../main" src="../bower_components/requirejs/require.js"></script>
+    <script data-main="../require-config" src="../bower_components/requirejs/require.js"></script>
   </body>
 </html>
