--- a/app/templates/seed/test/index.html
+++ b/app/templates/seed/test/index.html
@@ -17,6 +17,6 @@
     }
   </script>
 
-  <script data-main="../main" src="../bower_components/requirejs/require.js"></script>
+  <script data-main="../require-config" src="../bower_components/requirejs/require.js"></script>
 </body>
 </html>
