/public route should be /
- fixes #103

--- a/app/templates/seed/test/index.html
+++ b/app/templates/seed/test/index.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <div id="goToApp"><a href="/public/" target="_blank">browse app in a new tab</a></div>
+  <div id="goToApp"><a href="/" target="_blank">browse app in a new tab</a></div>
   <div id="mocha"></div>
   <script>
     var require = {
